--- a/src/components/Tasks.scss
+++ b/src/components/Tasks.scss
@@ -5,6 +5,8 @@
     max-width: 40%;
     padding-top: 50px;
     height: 100vh;
+    overflow-y: hidden;
+    flex: auto;
 
     h2 {
         margin-bottom: 24px;
@@ -12,7 +14,6 @@
 
     h3 {
         font-size: 18px;
-        margin-bottom: 18px;
     }
 
     .last-tasks {
@@ -21,7 +22,31 @@
         display: flex;
         flex-direction: column;
 
+        h3 {
+            margin-bottom: 18px;
+        }
+
+        ::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: linear-gradient(
+                262.71deg,
+                #00d1ff -30.04%,
+                #00ffa3 124.74%
+            );
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: #555;
+        }
         .tasks-list {
+            overflow-y: scroll;
             margin-top: 28px;
         }
     }
