--- a/src/components/Tasks.scss
+++ b/src/components/Tasks.scss
@@ -8,6 +8,15 @@
     overflow-y: hidden;
     flex: auto;
 
+    @media (max-width: 1024px) {
+        max-width: 60%;
+    }
+
+    @media (max-width: 768px) {
+        padding: 30px;
+        max-width: 100%;
+    }
+
     h2 {
         margin-bottom: 24px;
     }
@@ -18,7 +27,7 @@
 
     .last-tasks {
         flex: 1;
-        overflow: hidden;
+        overflow-y: hidden;
         display: flex;
         flex-direction: column;
 
@@ -26,14 +35,17 @@
             margin-bottom: 18px;
         }
 
+        /* width */
         ::-webkit-scrollbar {
             width: 5px;
         }
 
+        /* Track */
         ::-webkit-scrollbar-track {
             background: #f1f1f1;
         }
 
+        /* Handle */
         ::-webkit-scrollbar-thumb {
             background: linear-gradient(
                 262.71deg,
@@ -42,11 +54,13 @@
             );
         }
 
+        /* Handle on hover */
         ::-webkit-scrollbar-thumb:hover {
             background: #555;
         }
+
         .tasks-list {
-            overflow-y: scroll;
+            overflow-y: auto;
             margin-top: 28px;
         }
     }
